--- a/_posts/2020-09-27-thm-jeff.md
+++ b/_posts/2020-09-27-thm-jeff.md
@@ -2,7 +2,7 @@
 layout: post
 title: Tryhackme-Jeff Writeup
 hide_title: false
-color: grey
+color: light blue
 permalink: /ctf/thm-jeff
 #feature-img: 
 #author: ickl0cc
